--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.75.6",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.1.0",
