feat: 添加babel,打包压缩

--- a/tsconfig.type.json
+++ b/tsconfig.type.json
@@ -1,8 +1,11 @@
 {
-    "compilerOptions": {
-        "declaration": true,
-        "declarationDir": "./types",
-        "emitDeclarationOnly": true,
-        "experimentalDecorators": true
-    }
+  "compilerOptions": {
+    "removeComments": false,
+    "target": "es5",
+    "declaration": true,
+    "declarationDir": "dist",
+    "emitDeclarationOnly": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
+  }
 }
