--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": false,
   "unpkg": "dist/rollup-bundler-template.umd.js",
   "jsdelivr": "dist/rollup-bundler-template.umd.js",
-  "main": "dist/rollup-bundler-template.common.js",
+  "main": "dist/rollup-bundler-template.cjs.js",
   "module": "dist/rollup-bundler-template.es.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -16,7 +16,7 @@
     "predev": "rimraf dist",
     "dev": "rollup -w -c scripts/config.js --environment TARGET:es",
     "prebuild": "rimraf dist && tsc -p ./tsconfig.type.json",
-    "build": "node scripts/build.js"
+    "build": "rollup -c scripts/build.js"
   },
   "author": {
     "name": "Peachick",
@@ -32,7 +32,19 @@
     "url": "https://github.com/Peachick/rollup-bundler-template/issues"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-json": "^4.1.0",
     "@types/node": "^17.0.41",
+    "babel-plugin-transform-eval": "^6.22.0",
+    "commitizen": "^4.2.4",
+    "commitlint-config-cz": "^0.13.3",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.75.6",
@@ -41,10 +53,13 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.32.1",
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@babel/core": "^7.18.6",
+    "babel": "^6.23.0",
     "reflect-metadata": "^0.1.13"
   }
 }
