--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "This is a rollup bundler that provides packaged generic thrid-party libraries or components",
   "license": "MIT",
   "private": false,
-  "unpkg": "dist/rollup-bundler-template.umd.js",
-  "jsdelivr": "dist/rollup-bundler-template.umd.js",
-  "main": "dist/rollup-bundler-template.cjs.js",
-  "module": "dist/rollup-bundler-template.es.js",
+  "unpkg": "dist/index.umd.js",
+  "jsdelivr": "dist/index.umd.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist/**/*"
